# testlab

./: .gitignore  README.md  cli.py  projects.json  pyproject.toml  run_audit.py  testlab.py
core/: base.py  config.py  github.py  notifier.py  reporter.py  runner.py  sanitizer.py  wiki.py
modules/: auto_reply_audit.py  canary_check.py  cars_activity.py  cars_distribution_audit.py  cc_browser_audit.py  cc_log_leakage.py  cc_memory_renderer.py  cc_pending_duplicates.py  cc_text_audit.py  cc_visual_tester.py  command_center_api_check.py  connector_config_check.py  daemon_activity_check.py  daemon_config_expert_refs.py  daemon_errors.py  daemon_health_audit.py  daemon_import_check.py  daemon_smoke_test.py  dead_letter_check.py  draft_quality_audit.py  dronor_expert.py  e2e_activity_log.py  e2e_bulk_resolve.py  e2e_core_memory.py  e2e_dronor_api.py  e2e_events_screen.py  e2e_feedback_stats.py  e2e_overview_loads.py  e2e_pending_loads.py  e2e_resolve_action.py  events_pipeline_audit.py  feedback_loop_audit.py  file_size_guard.py  health_check.py  idempotency.py  kg_freshness.py  kg_health.py  knowledge_db_audit.py  llm_judge.py  llm_ux_critic.py  (+18 more)
projects/personal_agi/: project.json
results/: .gitignore  _alert_state.json
results/personal_agi/: cc_memory_health_latest.json  e2e_2026-02-22_15-19.json  e2e_2026-02-22_16-25.json  e2e_2026-02-22_16-28.json  e2e_2026-02-22_16-40.json  e2e_2026-02-22_16-43.json  e2e_2026-02-22_17-30.json  e2e_2026-02-22_17-54.json  e2e_2026-02-22_17-55.json  e2e_2026-02-22_17-57.json  e2e_latest.json  (+54 more)
ui/: dashboard.html
wiki/: README.md
(+2 files in other folders)
