[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "testlab"
version = "0.1.0"
description = "Universal TestLab — platform for testing AI-agent projects"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
testlab = "testlab.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*"]
